packages/go/.lib/macos-arm64/include/crawlberg.h

typedef uint64_t CBERGAlefHandle;
int32_t cberg_last_error_code(void);
const char *cberg_last_error_context(void);
void cberg_free_string(char *ptr);
CBERGAlefHandle
cberg_crawl_engine_handle_crawl_stream_start(CBERGAlefHandle client,
                                             CBERGAlefHandle req);
CBERGAlefHandle
cberg_crawl_engine_handle_crawl_stream_next(CBERGAlefHandle handle);
void cberg_crawl_engine_handle_crawl_stream_free(CBERGAlefHandle handle);
CBERGAlefHandle
cberg_crawl_engine_handle_batch_crawl_stream_start(CBERGAlefHandle client,
                                                   CBERGAlefHandle req);
CBERGAlefHandle
cberg_crawl_engine_handle_batch_crawl_stream_next(CBERGAlefHandle handle);
void cberg_crawl_engine_handle_batch_crawl_stream_free(CBERGAlefHandle handle);
char *cberg_batch_crawl_results_to_json(CBERGAlefHandle handle);
void cberg_batch_crawl_results_free(CBERGAlefHandle handle);
CBERGAlefHandle cberg_batch_crawl_stream_request_from_json(const char *json);
void cberg_batch_crawl_stream_request_free(CBERGAlefHandle handle);
char *cberg_batch_scrape_results_to_json(CBERGAlefHandle handle);
void cberg_batch_scrape_results_free(CBERGAlefHandle handle);
char *cberg_browser_config_to_json(CBERGAlefHandle handle);
void cberg_browser_config_free(CBERGAlefHandle handle);
CBERGAlefHandle cberg_browser_config_default(void);
char *cberg_citation_result_to_json(CBERGAlefHandle handle);
void cberg_citation_result_free(CBERGAlefHandle handle);
char *cberg_content_config_to_json(CBERGAlefHandle handle);
void cberg_content_config_free(CBERGAlefHandle handle);
CBERGAlefHandle cberg_content_config_default(void);
CBERGAlefHandle cberg_crawl_config_from_json(const char *json);
char *cberg_crawl_config_to_json(CBERGAlefHandle handle);
void cberg_crawl_config_free(CBERGAlefHandle handle);
CBERGAlefHandle cberg_crawl_config_default(void);
int32_t cberg_crawl_config_validate(CBERGAlefHandle this_);
void cberg_crawl_engine_handle_free(CBERGAlefHandle handle);
CBERGAlefHandle cberg_crawl_result_from_json(const char *json);
char *cberg_crawl_result_to_json(CBERGAlefHandle handle);
void cberg_crawl_result_free(CBERGAlefHandle handle);
uintptr_t cberg_crawl_result_unique_normalized_urls(CBERGAlefHandle this_);
CBERGAlefHandle cberg_crawl_stream_request_from_json(const char *json);
void cberg_crawl_stream_request_free(CBERGAlefHandle handle);
char *cberg_interaction_result_to_json(CBERGAlefHandle handle);
void cberg_interaction_result_free(CBERGAlefHandle handle);
char *cberg_map_result_to_json(CBERGAlefHandle handle);
void cberg_map_result_free(CBERGAlefHandle handle);
char *cberg_scrape_result_to_json(CBERGAlefHandle handle);
void cberg_scrape_result_free(CBERGAlefHandle handle);
char *cberg_ssrf_policy_to_json(CBERGAlefHandle handle);
void cberg_ssrf_policy_free(CBERGAlefHandle handle);
CBERGAlefHandle cberg_ssrf_policy_default(void);
CBERGAlefHandle cberg_ssrf_policy_from_env(void);
void cberg_crawl_event_free(CBERGAlefHandle handle);
char *cberg_crawl_event_to_json(CBERGAlefHandle handle);
CBERGAlefHandle cberg_batch_crawl(CBERGAlefHandle engine, const char *urls);
CBERGAlefHandle cberg_batch_scrape(CBERGAlefHandle engine, const char *urls);
CBERGAlefHandle cberg_crawl(CBERGAlefHandle engine, const char *url);
CBERGAlefHandle cberg_create_engine(CBERGAlefHandle config);
CBERGAlefHandle cberg_generate_citations(const char *markdown);
CBERGAlefHandle cberg_interact(CBERGAlefHandle engine, const char *url,
                               const char *actions);
CBERGAlefHandle cberg_map_urls(CBERGAlefHandle engine, const char *url);
CBERGAlefHandle cberg_scrape(CBERGAlefHandle engine, const char *url);