packages/csharp/Crawlberg/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
// alef:hash:002b6eb28adcf32c7706bfc391fbbe89eeba5b6be2b10999a8d5793343405d61
// alef:handle-abi:1
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace Crawlberg;

internal static partial class NativeMethods
{
    private const string LibName = "crawlberg_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_engine_handle_free")]
    internal static extern void CrawlEngineHandleFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_batch_crawl_stream_request_from_json")]
    internal static extern ulong BatchCrawlStreamRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_batch_crawl_stream_request_free")]
    internal static extern void BatchCrawlStreamRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_config_from_json")]
    internal static extern ulong CrawlConfigFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_config_free")]
    internal static extern void CrawlConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_result_from_json")]
    internal static extern ulong CrawlResultFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_result_free")]
    internal static extern void CrawlResultFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_stream_request_from_json")]
    internal static extern ulong CrawlStreamRequestFromJson([MarshalAs(UnmanagedType.LPUTF8Str)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_stream_request_free")]
    internal static extern void CrawlStreamRequestFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_batch_crawl_results_to_json")]
    internal static extern IntPtr BatchCrawlResultsToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_batch_crawl_results_free")]
    internal static extern void BatchCrawlResultsFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_batch_scrape_results_to_json")]
    internal static extern IntPtr BatchScrapeResultsToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_batch_scrape_results_free")]
    internal static extern void BatchScrapeResultsFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_browser_config_to_json")]
    internal static extern IntPtr BrowserConfigToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_browser_config_free")]
    internal static extern void BrowserConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_citation_result_to_json")]
    internal static extern IntPtr CitationResultToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_citation_result_free")]
    internal static extern void CitationResultFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_content_config_to_json")]
    internal static extern IntPtr ContentConfigToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_content_config_free")]
    internal static extern void ContentConfigFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_config_to_json")]
    internal static extern IntPtr CrawlConfigToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_event_to_json")]
    internal static extern IntPtr CrawlEventToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_event_free")]
    internal static extern void CrawlEventFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_result_to_json")]
    internal static extern IntPtr CrawlResultToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_interaction_result_to_json")]
    internal static extern IntPtr InteractionResultToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_interaction_result_free")]
    internal static extern void InteractionResultFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_map_result_to_json")]
    internal static extern IntPtr MapResultToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_map_result_free")]
    internal static extern void MapResultFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_scrape_result_to_json")]
    internal static extern IntPtr ScrapeResultToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_scrape_result_free")]
    internal static extern void ScrapeResultFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_ssrf_policy_to_json")]
    internal static extern IntPtr SsrfPolicyToJson(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_ssrf_policy_free")]
    internal static extern void SsrfPolicyFree(ulong ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_generate_citations")]
    internal static extern ulong GenerateCitations(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string markdown
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_create_engine")]
    internal static extern ulong CreateEngine(
        ulong config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_scrape")]
    internal static extern ulong Scrape(
        ulong engine,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl")]
    internal static extern ulong Crawl(
        ulong engine,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_map_urls")]
    internal static extern ulong MapUrls(
        ulong engine,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_interact")]
    internal static extern ulong Interact(
        ulong engine,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string url,
        IntPtr actions
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_batch_scrape")]
    internal static extern ulong BatchScrape(
        ulong engine,
        IntPtr urls
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_batch_crawl")]
    internal static extern ulong BatchCrawl(
        ulong engine,
        IntPtr urls
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_content_config_default")]
    internal static extern ulong ContentConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_browser_config_default")]
    internal static extern ulong BrowserConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_config_default")]
    internal static extern ulong CrawlConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_config_validate")]
    internal static extern void CrawlConfigValidate(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_result_unique_normalized_urls")]
    internal static extern ulong CrawlResultUniqueNormalizedUrls(
        ulong handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_ssrf_policy_default")]
    internal static extern ulong SsrfPolicyDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_ssrf_policy_from_env")]
    internal static extern ulong SsrfPolicyFromEnv();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_engine_handle_crawl_stream_start")]
    internal static extern ulong CrawlEngineHandleCrawlStreamStart(ulong client, ulong req);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_engine_handle_crawl_stream_next")]
    internal static extern ulong CrawlEngineHandleCrawlStreamNext(ulong handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_engine_handle_crawl_stream_free")]
    internal static extern void CrawlEngineHandleCrawlStreamFree(ulong handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_engine_handle_batch_crawl_stream_start")]
    internal static extern ulong CrawlEngineHandleBatchCrawlStreamStart(ulong client, ulong req);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_engine_handle_batch_crawl_stream_next")]
    internal static extern ulong CrawlEngineHandleBatchCrawlStreamNext(ulong handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_crawl_engine_handle_batch_crawl_stream_free")]
    internal static extern void CrawlEngineHandleBatchCrawlStreamFree(ulong handle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "cberg_free_string")]
    internal static extern void FreeString(IntPtr ptr);

}
